# code-knowledge-graph

./: .gitignore  EVAL_RESULTS.md  PLAN.md  README.md  pyproject.toml
ckg/: __init__.py  cli.py  embedder.py  export.py  graph.py  models.py  queries.py  store.py  watcher.py
ckg/parsers/: __init__.py  python.py
tests/: test_cli.py  test_decorators_transitive.py  test_embedder.py  test_export.py  test_graph.py  test_params.py  test_parser.py  test_queries.py  test_store.py  test_watcher.py
